fixed some layout issues in borrowing info

--- a/CSS/individual_pages/user_profile.css
+++ b/CSS/individual_pages/user_profile.css
@@ -37,29 +37,26 @@ flex-wrap: wrap;
 }
 
 /* borrowing state */
-
 .borrowing_state{
     display: flex;
     flex-direction: column;
 }
 
 /* borrowing each book */
-
 .borrowingInfo{
     display: flex;
-    align-items: top;
+    align-items: center;
     flex-wrap: wrap;
     border-collapse: collapse;
     justify-content: space-between;
 }
-/* borrowing details */
 
+/* borrowing details */
 .borrowedBookDetails{
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    margin-right: 20%;
     margin-left: 3%;
 }
 .borrowedBookimg{
@@ -74,11 +71,10 @@ flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: right;
-    margin-top: 50px;
+    margin-top: 20px;
 }
   
 .timestamp{
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -163,20 +159,4 @@ flex-wrap: wrap;
     background-color: #AC8FBF;
     border: none;
 }
-
-  @media (min-device-width: 320px) and (max-device-width: 700px){
-    .timeline{
-        list-style-type: none;
-        display: block;
-      }
-      .li{
-        transition: all 200ms ease-in;
-        display: flex;
-        width: inherit;
-      }
-      .timestamp{
-        width: 100px;
-      }
-       
-  }
   
